# sixbit

./: .gitignore  README.md  pyproject.toml
src/sixbit/core/: __init__.py
